Fix Linux audio playback

Playing audio files shorter than about 11000 samples on Linux was either not working at all, or re-playing (starting and stopping on the same audio object) was working only intermittently.  It was possible to stop audio playback before the first buffer was played, resulting in no sound at all.  Also, if replaying, the buffer may have been dirty from the previous playback on the same device.

So on Linux at least, these issues appear fixed.

BUG=73045,47761,59367,59369,59370,65618
TEST=Manual, quickly playing short audio files on Linux should work

Review URL: http://codereview.chromium.org/6776024

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@81669 0039d316-1c4b-4281-b951-d872f2087c98